# safety-api

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml
policies/: hate_speech.yaml  pii_detection.yaml  profanity.yaml  prompt_injection.yaml  sexual_content.yaml  violence_threats.yaml
src/safety_api/: __init__.py  __main__.py  anthropic_eval.py  cli.py  engine.py  loader.py  models.py  sanitize.py
src/safety_api/formatters/: __init__.py  json_fmt.py  text.py
src/safety_api/rules/: __init__.py  base.py  keyword.py  regex.py  semantic.py  validators.py
tests/: conftest.py  test_anthropic_eval.py  test_cli.py  test_engine.py  test_formatters.py  test_loader.py  test_models.py  test_sanitize.py  test_validators.py
tests/fixtures/: invalid_policy.yaml  sample_policy.yaml
tests/test_rules/: test_keyword.py  test_regex.py  test_semantic.py
